--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Барахолка</a>
+        <a class="navbar-brand" href="/"> <h1>Барахолка</h1></a>
         {% if current_user.is_authenticated %}
-            <a class="navbar-brand" href="/logout">{{ current_user.name }}->Выйти</a>
+            <a class="btn btn-primary" href="/logout">Выйти</a>
         {% else %}
             <p>
                 <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
