--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Товары в наличии</h1>
-    <a href="product" class="btn btn-secondary">Добавить товар</a>
-    <div class="col-md3 border rounded">
+    <h3>Товары в наличии</h3>
+    {% if current_user.is_authenticated %}
+        <a href="product" class="btn btn-secondary">Добавить товар</a>
+    {% endif %}
+    <div class="col-md3  border rounded">
         {% for item in products_invisible %}
-        <div class="col-md6 border rounded">
+        <div class="col-md6 border rounded" style="background-color:rgb(236, 236, 207);">
             <h2>{{ item.title }}</h2>
             <div>
                 {{ item.content }}
@@ -14,6 +16,7 @@
                 Дата написания - {{ item.created_date }} - Неопубликовано!
             </div>
              <div>
+                <a href="/product_pub/{{ item.id }}" class="btn btn-success">Опубликовать</a>
                 <a href="/product/{{ item.id }}" class="btn btn-warning">Изменить</a>
                 <a href="/product_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
             </div>
@@ -32,6 +35,7 @@
             <div>
                 <a href="/product/{{ item.id }}" class="btn btn-warning">Изменить</a>
                 <a href="/product_delete/{{ item.id }}" class="btn btn-danger">Удалить</a>
+                <a href="/product_hide/{{ item.id }}" class="btn" style="background-color:black;color: white;">Спрятать</a>
             </div>
         </div>
         {% endfor %}
