--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -10,7 +11,20 @@
     <title>{{ title }}</title>
     <style>
         div {
-         margin: 10px;
+            margin: 10px;
+        }
+        .post-thumb {
+            float: right
+        }
+        .post-thumb img {
+            display: block
+        }
+        .post-content {
+            margin-right: 320px;
+        }
+        .post-title {
+            font-weight: bold;
+            font-size: 200%
         }
     </style>
 </head>
@@ -19,15 +33,32 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="/"> <h1>Барахолка</h1></a>
         {% if current_user.is_authenticated %}
-            <a class="btn btn-primary" href="/logout">Выйти</a>
+            <div class="dropdown text-end">
+                <a class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser" data-toggle="dropdown" aria-expanded="false">
+                  <img src="https://github.com/mdo.png" alt="mdo" width="50" height="50" class="rounded-circle" >
+                </a>
+                <ul class="dropdown-menu dropdown-menu-right text-small" aria-labelledby="dropdownUser">
+                  <li><a class="dropdown-item" href="product">Добавить товар</a></li>
+                  <li><a class="dropdown-item" href="#">Профиль</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="/logout">Выйти</a></li>
+                </ul>
+              </div>
+
         {% else %}
             <p>
+                <a class="btn btn-outline-primary me-2" href="/login">Войти</a>
                 <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-                <a class="btn btn-success" href="/login">Войти</a>
             </p>
         {% endif %}
     </nav>
 </header>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<!-- Always remember to call the above files first before calling the bootstrap.min.js file -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 <!-- Begin page content -->
 <main role="main" class="container">
     {% block content %}{% endblock %}
