--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <p>Цена - {{ item.price }}</p>
             </div>
             <div>
-                <a href="/" class="btn btn-primary">Подробнее</a>
+                <a href="/product/{{item.id}}/map" class="btn btn-primary">Показать карту</a>
             </div>
         </div>
         {% endfor %}
