--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>Регистрация</h3>
+<h3>{{title}}</h3>
 <p style="color: crimson;">{{message}}</p>
 <form action="" method="post" autocomplete="off">
     {{ form.hidden_tag() }}
