--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
                     <p>{{ item.description }}</p>
                     <p>Дата написания - {{ item.created_date }}</p>
                     <p>Автор - {{ item.user.name }}</p>
+                    <p>Категория - {{ item.category }}</p>
                     <p>Расположение - {{ item.location }}</p>
                     <p>Цена - {{ item.price }}</p>
                 </div>
@@ -43,6 +44,7 @@
                     <p>{{ item.description }}</p>
                     <p>Дата написания - {{ item.created_date }}</p>
                     <p>Автор - {{ item.user.name }}</p>
+                    <p>Категория - {{ item.category }}</p>
                     <p>Расположение - {{ item.location }}</p>
                     <p>Цена - {{ item.price }}</p>
                 </div>
@@ -75,12 +77,17 @@
                 <p>{{ item.description }}</p>
                 <p>Дата написания - {{ item.created_date }}</p>
                 <p>Автор - {{ item.user.name }}</p>
+                <p>Категория - {{ item.category }}</p>
                 <p>Расположение - {{ item.location }}</p>
                 <p>Цена - {{ item.price }}</p>
             </div>
             <div>
                 <a href="/product/{{item.id}}/map" class="btn btn-primary me-2">Показать карту</a>
-                <a href="/product/{{item.id}}/buy" class="btn btn-warning me-2">Купить</a>
+                {% if current_user.is_authenticated %}
+                    <a href="/product/{{item.id}}/buy" class="btn btn-warning me-2">Купить</a>
+                {%else%}
+                    <a href="/register" class="btn btn-warning me-2">Купить</a>
+                {% endif%}
             </div>
         </div>
         {% endfor %}
